Add pytest and pytest-cov to push actions

--- a/.github/workflows/push-actions.yml
+++ b/.github/workflows/push-actions.yml
@@ -7,4 +7,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -e .
+      - run: pip install pytest pytest-cov
       - run: python -m pytest --cov mascado tests
