ignore temporary paths

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
     flake8 mascado tests
     mypy --ignore-missing-imports mascado tests
     - pylint mascado tests
-    sphinx-build docs/source docs/_build
+    sphinx-build docs/source docs/build
     # TODO: Some doctests are currently broken, examples no longer work
     #pytest --cov --doctest-modules
     pytest --cov
