--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,10 @@ exclude = .tox,*.egg,.git,__pycache__,dist
 max-complexity = 15
 max-line-length = 120
 
+[coverage:run]
+omit = .tox/*
+       docs/*
+
 [testenv]
 basepython =
     py36: python3.6
@@ -30,6 +34,4 @@ commands =
     mypy --ignore-missing-imports mascado tests
     - pylint mascado tests
     sphinx-build docs/source docs/build
-    # TODO: Some doctests are currently broken, examples no longer work
-    #pytest --cov --doctest-modules
-    pytest --cov
+    pytest --cov --doctest-modules
