trying to make github-actions use tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist = py36
-          py39
+envlist = py36, py39
+
+[gh-actions]
+python =
+    3.6: py36
+    3.9: py39
 
 [flake8]
 exclude = .tox,*.egg,.git,__pycache__,dist
